<resources>
    <string name="app_name">MoiveRanking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="developer_avatar">风之凌殇</string>
    <string name="developer_email">fzls.zju@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popularity">By Popularity</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_dummy">Dummy</string>
    <string name="dummy">Dummy setting</string>
    <string name="mysetting">My settings</string>
    <string name="pref_sort_criterion">popularity</string>
    <string name="pref_sort_criterion_default">popularity</string>
    <string name="pref_sort_order_default">true</string>
    <string name="pref_sort_order">true</string>
    <string name="pref_adult_default">false</string>
    <string name="pref_adult">true</string>
    <string name="pref_language">en</string>
    <string name="pref_language_default">en</string>
    <string name="pref_adult_test">test</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="pref_date_lower_default">1900-01-01</string>
    <string name="pref_date_lower">1900-01-01</string>
    <string name="pref_date_lower_hint">in the form of YYYY-MM-DD</string>
</resources>
