<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/mysetting">
        <ListPreference
            android:title="sort criterion"
            android:key="@string/pref_sort_criterion"
            android:defaultValue="@string/pref_sort_criterion_default"
            android:summary="sort the movie by what"
            android:entries="@array/sort_criterion_name"
            android:entryValues="@array/sort_criterion_value"
            />
        <SwitchPreference
            android:defaultValue="@string/pref_sort_order_default"
            android:key="@string/pref_sort_order"
            android:summary="sort the item descendingly?"
            android:title="Sort by desc"/>
        <SwitchPreference
            android:defaultValue="@string/pref_adult_default"
            android:key="@string/pref_adult_test"
            android:summary="do you want the adult movie appear in the list?"
            android:title="include adult?"/>
        <ListPreference
            android:title="language"
            android:key="@string/pref_language"
            android:defaultValue="@string/pref_language_default"
            android:summary="choose the default language"
            android:entries="@array/language_name"
            android:entryValues="@array/language_value"
            />
        <EditTextPreference
            android:inputType="datetime"
            android:title="Date lower bound"
            android:key="@string/pref_date_lower"
            android:defaultValue="@string/pref_date_lower_default"
            android:summary="only show file that is released late than this date"
            android:hint="@string/pref_date_lower_hint"
            android:selectAllOnFocus="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/dummy"
        android:key="dummy">
        <SwitchPreference
            android:defaultValue="true"
            android:key="example_switch"
            android:summary="@string/pref_description_social_recommendations"
            android:title="@string/pref_title_social_recommendations" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />
    </PreferenceCategory>


</PreferenceScreen>
